--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 layout: home
 title: Home
 ---
-
+<html>
+  <body>
 Welcome to my github homepage! Some recent posts are below:
 
-This site was built using the wonderful [Lagrange theme by Paul Le](https://github.com/LeNPaul/Lagrange)
+This site was built using the wonderful <a href="https://github.com/LeNPaul/Lagrange">Lagrange theme by Paul Le</a> 
+  </body>
+</html>
