--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 title: Home
 ---
 <h1>
-<img src="https://github.com/chris-langfield/chris-langfield.github.io/blob/gh-pages/assets/img/headshot-modified.png" alt="me">
+<img src="https://github.com/chris-langfield/chris-langfield.github.io/blob/gh-pages/assets/img/headshot-modified.png" alt=".me">
 
 Welcome to my github homepage! Some recent posts are below:
 
