--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 layout: home
 title: Home
 ---
-<h1>
-<img src="https://github.com/chris-langfield/chris-langfield.github.io/blob/gh-pages/assets/img/headshot-modified.png" alt=".me"></img>
 
+<img src="assets/img/headshot-modified.png" alt=".me"></img>
+
+<h1>
 Welcome to my github homepage! Some recent posts are below:
 
 This site was built using the wonderful <a href="https://github.com/LeNPaul/Lagrange">Lagrange theme by Paul Le</a> 
