--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 ---
 layout: home
 title: Home
+image: headshot-modified.png
 ---
-
-<img src="assets/img/headshot-modified.png" alt=".me"></img>
 
 <h1>
 Welcome to my github homepage! Some recent posts are below:
