--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 title: Home
-image: headshot-modified.png
+image: headshot-modified_300x300.png
 ---
 {% if page.image %}
   <img src="{{ site.github.url }}/assets/img/{{ page.image }}">
